--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "mongodb": "4.1",
-    "mongoose": "^7.6.0"
+    "mongoose": "^7.6.0",
+    "shortid": "^2.2.16"
   }
 }
