--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "NodeJS CRUD API",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "babel-node app.js",
     "dev": "nodemon app.js"
   },
   "author": "Shahbaz",
