--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "NodeJS CRUD API",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "babel-node app.js",
     "dev": "nodemon app.js"
@@ -15,10 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "joi": "^17.11.0",
     "mongodb": "4.1",
-    "mongoose": "^8.0.1",
-    "shortid": "^2.2.16"
+    "mongoose": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
