--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nodejs_practice",
+  "name": "node_api",
   "version": "1.0.0",
   "type": "module",
-  "description": "NodeJS CRUD API",
+  "description": "CRUD_API",
   "main": "app.js",
   "scripts": {
-    "start": "babel-node app.js",
-    "dev": "nodemon app.js"
+    "test": "node app.js",
+    "dev" : "nodemon app.js"
   },
   "author": "Shahbaz",
   "license": "ISC",
@@ -16,10 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "4.1",
-    "mongoose": "^8.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.3",
-    "@babel/preset-env": "^7.23.3"
+    "mongoose": "^8.0.1",
+    "nodemon": "^3.0.1"
   }
 }
