--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "CRUD_API",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js",
+    "start": "node app.js",
     "dev" : "nodemon app.js"
   },
   "author": "Shahbaz",
