--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0",
+    "mongodb": "4.1",
     "mongoose": "^8.0.1",
     "nodemon": "^3.0.1"
   }
